// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`McqQuestionEditAnswerFormComponent should snap when questionDropdownEnabled is updated 1`] = `
<tm-mcq-question-edit-answer-form
  __ngContext__={[Function Number]}
  cssRefresh={[Function EventEmitter_]}
  id=""
  inputTextBoxOther="undefined"
  isDisabled="false"
  isMcqOptionSelected={[Function Array]}
  questionDetails={[Function Object]}
  recipient=""
  responseDetails={[Function Object]}
  responseDetailsChange={[Function EventEmitter_]}
  valueSelected=""
>
  <tr
    aria-label="Response"
  >
    <td>
      <div>
        <select
          class="form-control form-select margin-bottom-8px ng-untouched ng-pristine ng-valid"
          id="dropdown-option-select"
        >
          <option
            value=""
          />
        </select>
      </div>
    </td>
  </tr>
</tm-mcq-question-edit-answer-form>
`;

exports[`McqQuestionEditAnswerFormComponent should snap with default view 1`] = `
<tm-mcq-question-edit-answer-form
  __ngContext__={[Function Number]}
  cssRefresh={[Function EventEmitter_]}
  id=""
  inputTextBoxOther="undefined"
  isDisabled="false"
  isMcqOptionSelected={[Function Array]}
  questionDetails={[Function Object]}
  recipient=""
  responseDetails={[Function Object]}
  responseDetailsChange={[Function EventEmitter_]}
  valueSelected=""
>
  <tr
    aria-label="Response"
  >
    <td>
      <div>
      </div>
    </td>
  </tr>
</tm-mcq-question-edit-answer-form>
`;
